# tickets

./: .gitignore  interpark.py  items.yaml  logger.py  prepare.sh  product.py  pyproject.toml
data/: capcha_data.html  capcha_slider_source.html  capcha_source.html  seat_sections_map_coords.txt  객석바로나오는경우.html
