[tool.poetry]
name = "tickets"
version = "0.1.0"
description = "Interpark Tickets Automator"
authors = ["이지훈 <zegalryang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
